Third fix on spacing on posters

--- a/a2/style.css
+++ b/a2/style.css
@@ -244,7 +244,7 @@
     max-width: 1400px;
     margin: 0 auto;
     padding: 20px;
-    margin-bottom: 100px; 
+    margin-bottom: 200px; 
   }
 
   .about-container {
